--- a/Web/Views/Idea/EditMembers.cshtml
+++ b/Web/Views/Idea/EditMembers.cshtml
@@ -127,8 +127,8 @@
                     </div>
                 </div>
                 <!---->
-                <!--Repost-->
-                <div id="repostWindow" class="d-none rounded">
+                <!--Repost + -->
+                <div id="repostWindow" class="d-none window_rounded_shadow">
                     <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
                         <span class="clr-white t-md">
                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -153,15 +153,16 @@
                         </button>
                     </div>
                     <div class="col-12 p-4">
-                        <form class="col-12 flex-form-dark">
+                        <form class="form-upd col-12 flex-form-dark">
                             <div class="col-10 form-floating">
-                                <input type="text"
-                                       class="form-control"
+                                <input disabled
+                                       type="text"
+                                       class="form-upd form-control"
                                        id="floatingInput"
-                                       placeholder="Поиск по имени" />
-                                <label class="text-dark" for="floatingInput">Поиск по имени</label>
+                                       placeholder="Поиск (В обновлении)" />
+                                <label class="text-dark" for="floatingInput">Поиск (В обновлении)</label>
                             </div>
-                            <button class="clr-mute btn bg-transparent">
+                            <button disabled class="clr-mute btn bg-transparent">
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                      width="16"
                                      height="16"
@@ -963,7 +964,7 @@ else
                             <div class="col-12 d-flex">
                                 <div class="col-3 b-right">
                                     <div class="btn-back-hover aside_section_adaptive p-2 ps-0 pe-0 ps-md-1 pe-md-1 ps-lg-2 pe-lg-2">
-                                        <a asp-action="@Model.Idea.Guid" asp-controller="idea" asp-route-section="editgeneral" class="text-truncate settings_link_text btn-unfocus text-start col-12 clr-mute btn clr-mute t-bold t-md bg-transparent">
+                                        <a asp-action="@Model.Idea.Guid" asp-controller="idea" asp-route-section="editgeneral" class="text-truncate settings_link_text btn-unfocus text-start col-12 hover-mute clr-mute btn clr-mute t-bold t-md bg-transparent">
                                             Основные
                                         </a>
                                     </div>
