--- a/Web/Views/Idea/Index.cshtml
+++ b/Web/Views/Idea/Index.cshtml
@@ -127,8 +127,8 @@
                     </div>
                 </div>
                 <!---->
-                <!--Repost-->
-                <div id="repostWindow" class="d-none rounded">
+                <!--Repost + -->
+                <div id="repostWindow" class="d-none window_rounded_shadow">
                     <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
                         <span class="clr-white t-md">
                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -153,15 +153,16 @@
                         </button>
                     </div>
                     <div class="col-12 p-4">
-                        <form class="col-12 flex-form-dark">
+                        <form class="form-upd col-12 flex-form-dark">
                             <div class="col-10 form-floating">
-                                <input type="text"
-                                       class="form-control"
+                                <input disabled
+                                       type="text"
+                                       class="form-upd form-control"
                                        id="floatingInput"
-                                       placeholder="Поиск по имени" />
-                                <label class="text-dark" for="floatingInput">Поиск по имени</label>
+                                       placeholder="Поиск (В обновлении)" />
+                                <label class="text-dark" for="floatingInput">Поиск (В обновлении)</label>
                             </div>
-                            <button class="clr-mute btn bg-transparent">
+                            <button disabled class="clr-mute btn bg-transparent">
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                      width="16"
                                      height="16"
