--- a/Web/Views/User/About.cshtml
+++ b/Web/Views/User/About.cshtml
@@ -17,7 +17,7 @@
         <div id="checkOutContainer">
             <div class="d-flex position-relative">
 
-                <!--Repost-->
+                <!--Repost + -->
                 <div id="repostWindow" class="d-none window_rounded_shadow">
                     <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
                         <span class="clr-white t-md">
@@ -43,15 +43,16 @@
                         </button>
                     </div>
                     <div class="col-12 p-4">
-                        <form class="col-12 flex-form-dark">
+                        <form class="form-upd col-12 flex-form-dark">
                             <div class="col-10 form-floating">
-                                <input type="text"
-                                       class="form-control"
+                                <input disabled
+                                       type="text"
+                                       class="form-upd form-control"
                                        id="floatingInput"
-                                       placeholder="Поиск по имени" />
-                                <label class="text-dark" for="floatingInput">Поиск по имени</label>
+                                       placeholder="Поиск (В обновлении)" />
+                                <label class="text-dark" for="floatingInput">Поиск (В обновлении)</label>
                             </div>
-                            <button class="clr-mute btn bg-transparent">
+                            <button disabled class="clr-mute btn bg-transparent">
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                      width="16"
                                      height="16"
@@ -88,7 +89,7 @@
                     </div>
                 </div>
                 <!---->
-                <!--New Idea-->
+                <!--New Idea + -->
                 <div id="newIdeaWindow" class="d-none window_rounded_shadow">
                     <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
                         <span class="clr-white t-md">
@@ -131,17 +132,17 @@
                         <div class="mt-2 col-12 d-flex justify-content-center">
                             <form id="asyncNewIdeaForm" class="col-10">
                                 <div class="col-12 mb-2">
-                                    <input type="text"
-                                           class="form-control"
+                                    <input autocomplete="off" minlength="4" maxlength="56" type="text"
+                                           class="form-upd form-control"
                                            id="floatingInput" />
                                     <label class="pt-1 t-sm clr-mute" for="floatingInput">
                                         Придумайте название
                                     </label>
                                 </div>
                                 <div class="col-12 mb-3">
-                                    <textarea style="height: 82px; resize: none !important;"
+                                    <textarea autocomplete="off" minlength="4" maxlength="220" style="height: 82px; resize: none !important;"
                                               type="text"
-                                              class="form-control"
+                                              class="form-upd form-control"
                                               id="floatingInput"></textarea>
                                     <label class="pt-1 t-sm clr-mute" for="floatingInput">
                                         Дайте краткое описание своей идее
@@ -152,7 +153,7 @@
                                            type="checkbox"
                                            value=""
                                            id="flexCheckChecked" />
-                                    <span class="g-status-text">
+                                    <span class="me-1">
                                         <svg xmlns="http://www.w3.org/2000/svg"
                                              width="26"
                                              height="26"
@@ -188,15 +189,17 @@
                                     </span>
                                     <div class="mt-2" id="selectedNewIdeaTags"></div>
                                 </div>
-                                <button type="submit" class="mt-4 icon-link-btn">
+                                <button type="submit" class="mt-3 icon-link-btn">
                                     Создать идею
                                 </button>
+                                <label id="newIdeaWindowError" class="pt-2 text-center text-danger t-sm">
+                                </label>
                             </form>
                         </div>
                     </div>
                 </div>
                 <!---->
-                <!--Friends-->
+                <!--Friends + -->
                 <div id="friendsWindow" class="d-none window_rounded_shadow">
                     <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
                         <span class="clr-white t-md">
@@ -222,15 +225,15 @@
                         </button>
                     </div>
                     <div class="col-12 p-4">
-                        <form class="col-12 flex-form-dark">
+                        <form class="form-upd col-12 flex-form-dark">
                             <div class="col-10 form-floating">
-                                <input type="text"
-                                       class="form-control"
+                                <input disabled type="text"
+                                       class="form-upd form-control"
                                        id="floatingInput"
                                        placeholder="Поиск по имени" />
                                 <label class="text-dark" for="floatingInput">Поиск по имени</label>
                             </div>
-                            <button class="clr-mute btn bg-transparent">
+                            <button disabled class="clr-mute btn bg-transparent">
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                      width="16"
                                      height="16"
@@ -283,7 +286,7 @@
                     </div>
                 </div>
                 <!---->
-                <!--Invite-->
+                <!--Invite + -->
                 <div id="inviteWindow" class="d-none window_rounded_shadow">
                     <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
                         <span class="clr-white t-md">
